@@ -1,2 +1,1 @@
-DIST xemacs-base-2.36-pkg.tar.gz 567630 SHA256 c868ebe62d1ca1b162503074f00a644ef5373a5672e12e8e01e7aed21e176d69 SHA512 78e08e38babffe578340ae7532e13a3343ddefc751c3b2ed23ff7edb313affd2c42bbb89e8733cf0f846f649712e01522a878e72d7f99d4e212882358c1d622a WHIRLPOOL cdea39fe7f6cad6a414a1579375af3d66c88627e01f707f3234c5121480d5e093351c9fab44d98f52c568a0ce9fea555e421ff884aef6fdca7e7b3bdeab9924b
-DIST xemacs-base-2.37-pkg.tar.gz 569958 SHA256 fabf62019c2522fc91e83e508f28425da605ab574849f37073c7f163e023662a SHA512 2696e608562d6a96628a1d9f68df4ab1dc025bd93216a228ecfe9dec0c11f8472b90bb4789115b215d10b0cabe67cb1cbfacd3292a10412ec1f4cc576894de43 WHIRLPOOL 80c38ecc63c9f040f7523cb77a9e3192694b95dea20a7adcaafb898a8d15fd2c16c026b1d3892f2b249ff493618f08f62224ea12aa924feb31aa7618df6505d5
+DIST xemacs-base-2.39-pkg.tar.gz 577791 SHA256 568a9c329b818e481bb4af5ea8d06a0e29615f348720d33fa2ca660946fe2c72 SHA512 77762b5e6b1fb0c4d7e7c44b80c43511026b05b0b7df2333499db2ec044e217a624f6e4aed7d77de01f972a466ef9d54d96ad7a234980bcf3758b97ac4100b43 WHIRLPOOL 8536fad8f22ac60ae0368d0b23556a9adf1cd140f3add9c917b62bc148a0d48a2c8bf6fd1c114e61410743100f18fb68fdf52d81ef6eca48792097c28992ceb1
